--- a/Client-Side/CSS/Projetos/Barbearia/Login/styles.css
+++ b/Client-Side/CSS/Projetos/Barbearia/Login/styles.css
@@ -1,28 +1,23 @@
-/* styles.css */
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
-}
-
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0%;
+    padding: 0%;
+} 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
     text-align: center;
-}
 
-.navbar img {
-    width: 100px;
-    height: auto;
-    vertical-align: middle;
-}
+    & .navbar {
+    padding: 1%;
+    background-color: rgb(196, 196, 196);
+    box-shadow: 2px 2px 2px rgba(22, 20, 20, 0.813);
 
-.navbar h1 {
-    display: inline;
-    margin-left: 10px;
+        & img {
+            width: 200px;
+            margin: 0px;
+        }
+    }
 }
 
 main {
@@ -37,10 +32,6 @@ section {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-}
-
-form {
-    text-align: center;
 }
 
 input[type="text"],
