--- a/Client-Side/CSS/Exercicios/Ex02/style.css
+++ b/Client-Side/CSS/Exercicios/Ex02/style.css
@@ -28,6 +28,7 @@ main {
         display: inline-block;
         margin: 15px 20px;
         padding: 20px;
+        color:aliceblue;
 
         & .capa {
             width: 320px;
