--- a/Client-Side/CSS/Exercicios/Ex02/style.css
+++ b/Client-Side/CSS/Exercicios/Ex02/style.css
@@ -6,9 +6,12 @@
     padding: 0%;
 } 
 
+body {
+    background-color: rgba(205, 205, 205, 0.802);
+}
 
 .navbar {
-    background-color: coral;
+    background-color: rgb(0, 190, 247);
 
     & img {
         width: 200px;
@@ -19,16 +22,16 @@
 
 main {
     margin: 20px 10px;
-    background-color: antiquewhite;
     
     & section {
         width: 310px;
         height: 450px;
-        background-color: blue;
+        background-color: aliceblue;
         display: inline-block;
         margin: 15px 20px;
         padding: 20px;
-        color:aliceblue;
+        box-shadow: 2px 3px 2px rgba(141, 141, 141, 0.705);
+        border-radius: 8px;
 
         & .capa {
             width: 320px;
@@ -56,8 +59,17 @@ main {
         & button {
             margin-top: 90px;
             margin-left: 90px;
-            padding: 12px;
+            padding: 15px 25px;
+            border-radius: 100px;
             font-size: 20px;
+            background-color: rgb(5, 143, 255);
+            border: none;
+            color: white;
+            box-shadow: 2px 3px 2px rgba(141, 141, 141, 0.705);
+        }
+
+        & button:hover {
+            background-color: rgba(0, 140, 255, 0.459);
         }
     }
 }
