--- a/Client-Side/CSS/Exercicios/Ex02/secao.css
+++ b/Client-Side/CSS/Exercicios/Ex02/secao.css
@@ -27,12 +27,15 @@ main {
     height: 1100px;
     text-align: center;
     box-shadow: 2px 3px 2px rgba(141, 141, 141, 0.705);
+    border-radius: 8px;
 
 
     & img {
         width: 550px;
         height: 410px;
         margin: 10px;
+        border-radius: 10px;
+        box-shadow: 2px 3px 2px rgba(141, 141, 141, 0.705);
     }
 
     & h1 {
