--- a/Client-Side/CSS/Exercicios/Ex02/secao.css
+++ b/Client-Side/CSS/Exercicios/Ex02/secao.css
@@ -34,6 +34,7 @@ main {
         width: 550px;
         height: 410px;
         margin: 10px;
+        margin-top: 20px;
         border-radius: 10px;
         box-shadow: 2px 3px 2px rgba(141, 141, 141, 0.705);
     }
