--- a/Client-Side/CSS/Exercicios/Ex01/index.css
+++ b/Client-Side/CSS/Exercicios/Ex01/index.css
@@ -9,10 +9,11 @@
 body {
     background-color: rgba(223, 223, 223, 0.642);
     
-    & footer {
+    footer {
         background-color: rgb(196, 196, 196);
         text-align: center;
         padding: 2% 0;
+        margin-top: 500px;
     }
     
 }
@@ -78,8 +79,15 @@ body {
 main {
     text-align: center;
     background-color:  rgba(223, 223, 223, 0.642);;
-     
-    & div {
+    width: 1200px;
+    height: 600px; 
+
+    h1 {
+        padding-top: 20px;
+    } 
+
+    section {
+        width: 250px;
         margin: 2.5% 2.5%;
         text-align: center;
         display: inline-block;
@@ -88,13 +96,17 @@ main {
         box-shadow: 2px 3px 2px rgba(141, 141, 141, 0.705);
         border-radius: 8px;
 
-        & p {
+        h1 {
+            font-size: 35px;
+        }
+
+        p {
             margin: 5% 0;
             font-size: 20px;
             padding-bottom: 50%;
         }
 
-        & .botao {
+        .botao {
             background-color: rgba(194, 194, 194, 0.61);
             border: none;
             padding: 5% 15%;
@@ -104,8 +116,12 @@ main {
             box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.491);
         }
 
-        & .botao:hover {
+        .botao:hover {
             background-color: rgba(86, 86, 86, 0.421);
         }
+    }
+
+    #container {
+        display: none;
     }
 }
