--- a/Client-Side/CSS/Exercicios/Ex01/index.css
+++ b/Client-Side/CSS/Exercicios/Ex01/index.css
@@ -10,12 +10,14 @@ body {
     background-color: rgba(223, 223, 223, 0.642);
     
     footer {
-        background-color: rgb(196, 196, 196);
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        background-color: #333;
+        color: #fff;
         text-align: center;
-        padding: 2% 0;
-        margin-top: 500px;
-    }
-    
+        padding: 10px 0;
+    } 
 }
 
 
