--- a/Client-Side/CSS/Exercicios/Ex03/styles.css
+++ b/Client-Side/CSS/Exercicios/Ex03/styles.css
@@ -1,4 +1,5 @@
 * {
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 100%;
     max-height: 100%;
     margin: 0px; 
@@ -6,11 +7,32 @@
 }
 
 body {
-    background: rgb(25, 212, 47);
+    background: rgb(180, 255, 189);
+}
+    
+p {
+    font-size: 20px;
 }
 
-nav {
-    background-color: rgb(0, 0, 0);
+.navbar {
+    background-image: linear-gradient(180deg, rgb(46, 192, 44), rgb(50, 122, 64), rgb(22, 88, 20));
+    color: white;
+}
+
+.navbar > h1 {
+    padding-top: 10px;
+    font-size: 35px;
+}
+
+.navbar h1, p {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.navbar > ul > li {
+    display: inline-block;
+    margin: 5px;
+    font-size: 15px;
 }
 
 main {
@@ -19,6 +41,14 @@ main {
     margin-right: 100px;
     box-shadow: 1px 1px 1px rgba(137, 134, 134, 0.454);
 
+}
+section {
+    margin: 10px;
+}
+
+section > p, h1 {
+    text-align: justify;
+    margin-left: 20px;
 }
 
 footer {
