--- a/Client-Side/CSS/Exercicios/Ex03/styles.css
+++ b/Client-Side/CSS/Exercicios/Ex03/styles.css
@@ -47,7 +47,7 @@ main {
 }
 
 main > .bugdroid {
-    padding-left: 50%;
+    margin-left: 50%;
 }
 main > .dandroids, .irinabloc {
     width: 100%;
