--- a/Client-Side/CSS/Exercicios/Ex03/styles.css
+++ b/Client-Side/CSS/Exercicios/Ex03/styles.css
@@ -32,7 +32,7 @@ p {
 .navbar > ul > li {
     display: inline-block;
     margin: 5px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 
@@ -40,25 +40,31 @@ main {
     max-width: 100%;
     max-height: 100%;
     background: white;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 50px;
+    margin-right: 50px;
     padding: 10px;
     box-shadow: 1px 1px 1px rgba(137, 134, 134, 0.454);
 }
 
+img {
+    margin: 2px 0;
+}
+
 main > .bugdroid {
-    margin-left: 50%;
+    padding-left: 30%;
 }
 main > .dandroids, .irinabloc {
     width: 100%;
 }
 
 main > p {
+    font-size: 30px;
     text-align: justify;
     text-indent: 1em;
 }
 
 main > h1 {
+    font-size: 45px;
     font-family: 'Courier New', Courier, monospace;
     color: rgb(38, 107, 37);
 }
@@ -67,6 +73,7 @@ main > h1 {
     background-image: linear-gradient(90deg, rgba(39, 172, 68, 0.403), rgba(80, 128, 80, 0.349), white);
     margin: 10px 0;
 }
+
 
 footer {
     width: 100px;
