--- a/Client-Side/CSS/Exercicios/Ex03/styles.css
+++ b/Client-Side/CSS/Exercicios/Ex03/styles.css
@@ -35,7 +35,6 @@ p {
     font-size: 30px;
 }
 
-
 main {
     max-width: 100%;
     max-height: 100%;
@@ -74,8 +73,46 @@ main > h1 {
     margin: 10px 0;
 }
 
+section > h1 {
+    font-size: 30px;
+    background-color: rgba(58, 185, 68, 0.787);
+    border-radius: 15px 15px 0px 0px;
+    color: white;
+}
+
+section {
+    text-indent: 1em;
+    background-color: rgba(176, 255, 216, 0.665);
+    border-radius: 15px;
+    box-shadow: 2px 2px 2px rgba(144, 144, 144, 0.83);
+}
+
+section p {
+    font-size: 25px;
+    margin: 5px 15px; 
+    text-align: justify;
+}
+
+section > span {
+    font-size: 25px;
+    display: inline-block;
+    margin-left: 50px;
+}
+
+.span2 > ul {
+    margin-left: 200px;
+    margin-bottom: 10px;
+}
 
 footer {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    background-color: rgb(86, 86, 86);
+    margin-top: 20px; 
+    padding-top: 20px;
+}
+
+footer > p {
+    color: white;
+    font-size: 25px;
+    text-align: center;
 }
