--- a/Client-Side/CSS/Exercicios/Ex01/index.css
+++ b/Client-Side/CSS/Exercicios/Ex01/index.css
@@ -9,15 +9,11 @@
 body {
     background-color: rgba(223, 223, 223, 0.642);
     
-    footer {
-        position: relative;
-        bottom: 0;
-        width: 100%;
-        background-color: #333;
-        color: #fff;
+    & footer {
+        background-color: rgb(196, 196, 196);
         text-align: center;
-        padding: 10px 0;
-    } 
+        padding: 2% 0;
+    }
 }
 
 
@@ -81,8 +77,6 @@ body {
 main {
     text-align: center;
     background-color:  rgba(223, 223, 223, 0.642);;
-    width: 1200px;
-    height: 600px; 
 
     h1 {
         padding-top: 20px;
@@ -124,6 +118,6 @@ main {
     }
 
     #container {
-        display: none;
+        visibility: hidden;
     }
 }
