--- a/Client-Side/JAVASCRIPT/Exercicios/Ex08/style.css
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex08/style.css
@@ -26,7 +26,8 @@ section {
         }
 
         & input {
-            font-size: 10px;
+            width: 125px;
+            font-size: 15px;
             padding: 5px;
         }
 
